--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
     add_ping_monitor('kiss', 'Kiss Internet Connectivity', '168.126.63.1');
     add_ping_monitor('convergy', 'Convergy Internet Connectivity', '111.125.97.38', 3);
-    add_ping_monitor('philgo6', 'w6.philgo.com site', 'w6.philgo.com');
-    add_ping_monitor('philgo7', 'w7.philgo.com site', 'w7.philgo.com');
-    add_ping_monitor('philgo8', 'w8.philgo.com site', 'w8.philgo.com');
+    add_ping_monitor('philgo6', 'w6.philgo.com site', 'w6.philgo.com', 2);
+    add_ping_monitor('philgo7', 'w7.philgo.com site', 'w7.philgo.com', 2);
+    add_ping_monitor('philgo8', 'w8.philgo.com site', 'w8.philgo.com', 2);
 
     function loop_ping_graph( id, ip ) {
         var exec = require('child_process').exec, child;
