set ping drop count to 4 for convergy..

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             top: 0;
             height: 50px;
         }
+        .last-ping-time {
+            font-size: 9pt;
+        }
     </style>
 </head>
 <body>
@@ -56,11 +59,12 @@
 
 
         var m = '<div id="monitor-'+id+'" class="internet-monitor">' +
-                '<h1>'+title+' : '+ip+'</h1>' +
+                '<h1>'+title+'</h1>' +
                 '    <div class="display">' +
                 '       <div class="graph">' +
                 '       </div>' +
                 '   </div>' +
+                '       <div class="last-ping-time"></div>' +
                 '</div>' +
                 '';
         $('body').append( m );
@@ -68,7 +72,7 @@
     }
 
     add_ping_monitor('kiss', 'Kiss Internet Connectivity', '168.126.63.1');
-    add_ping_monitor('convergy', 'Convergy Internet Connectivity', '111.125.97.38', 3);
+    add_ping_monitor('convergy', 'Convergy Internet Connectivity', '111.125.97.38', 4);
     add_ping_monitor('philgo6', 'w6.philgo.com site', 'w6.philgo.com', 2);
     add_ping_monitor('philgo7', 'w7.philgo.com site', 'w7.philgo.com', 2);
     add_ping_monitor('philgo8', 'w8.philgo.com site', 'w8.philgo.com', 2);
@@ -108,7 +112,7 @@
         else if ( ms > 100 ) color = '#6F5F13';
         else if ( ms > 80 ) color = '#356F07';
 
-        var height = Math.floor( ms / 3 );
+        var height = Math.floor( ms / 5 );
 
         var p = Math.floor( 50 * height / 100 );
         //console.log(p);
@@ -134,6 +138,12 @@
         if ( s >= -20 ) {
             $g.find('span').eq(0).remove();
         }
+        //var n = Date.now();
+        //var Y = Date.Year
+        var d = new Date();
+        var s = d.getHours() + ':' + d.getMinutes() + ':' + d.getSeconds();
+
+        $monitor.find('.last-ping-time').text( 'Last ping time: ' + s );
     }
 
 
