Work on merging of pull request

--- a/test.html
+++ b/test.html
@@ -5,153 +5,13 @@
     <script src="js/jquery-2.2.4.min.js"></script>
 </head>
 <body>
-<script>
-
-    // this, $( this );
-
-
-    // OOP of prototype.
-    /*
-    function abc( a, b ) {
-        this.re = a + b;
-    }
-    var def = new abc( 2, 3  );
-    def.__proto__.result = function ( ) { alert( this.re ); };
-    def.result();
-    */
-
-
-    /// OOP
-
-    var abc = {};
-    abc.set = function( a, b ) {
-
-        this.re = a + b;
-
-        return this;
-    };
-    abc.result = function ( ) {
-        alert( this.re );
-        return this;
-    };
-
-    //abc.set( 2, 3 );
-    //abc.result();
-
-
-    /// Chaining...
-
-    /*
-    abc.set( 2, 3 ).result().set( 4, 5 ).result()
-            .set( 6, 7).result()
-            .set( 8, 9).result()
-    ;
-    */
-
-    /// Anonymous Functions is a function without name.
-    /// anonymous function itself is not a complete because if it has no name, how will you use it?
-
-    (function () { })
-
-
-    /// A trick. Make it usable.
-
-
-    /// when you call a function... you do.... use.. "()"
-    /// logical quiz.
-
-
-    ();
-
-
-
-
-    ///
-
-
-
-    /// anon obj property re = 2 + 3;
-    /// return anon obj
-
-
-
-
-    // name
-
-    function name( str ) {
-        name.str = str;
-        return name;
-    }
-
-    var m = name('JaeHo');
-    m.log = function() {
-        console.log( name.str );
-        return name;
-    };
-    m.alert = function() {
-        alert( name.str );
-        return {
-            again: function () {
-                alert( 'again: ' + name.str );
-                return this;
-            }
-        }
-    };
-
-///
-    name( 'JaeHo Song')
-            .log()
-            .alert()
-            .again()
-            .again()
-            .again()
-            .again();
-
-
-
-
-
-
-    /// oop, anonymous function, chaining.
-
-
-
-
-    ///
-    /// jquery( selecting .. node/element )
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</script>
+<h1>
+    <div>
+    hello
+</h1>
+</div>
+<div>
+    How are you?
+</div>
 </body>
 </html>
