--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello World!</title>
+    <title>CMS - Center Monitoring System ( edited by JaeHoSong git account )</title>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/js.cookie.js"></script>
     <script src="js/underscore-1.8.3.min.js"></script>
