--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         title:'dev.withcenter.com',
         source_top:'http://218.50.181.110/monitor/index.php',
         source_disk:'http://218.50.181.110/monitor/df.php',
-        sound:'birds_phalcon',
+        sound:'siren',
         time_zone:'KST'
     } );
 
